--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -558,9 +558,9 @@ video {
   width: 100%;
 }
 
-@media (min-width: 380px) {
+@media (min-width: 340px) {
   .container {
-    max-width: 380px;
+    max-width: 340px;
   }
 }
 
@@ -616,10 +616,6 @@ video {
   left: 0px;
 }
 
-.left-5 {
-  left: 1.25rem;
-}
-
 .right-0 {
   right: 0px;
 }
@@ -671,6 +667,10 @@ video {
   margin-bottom: auto;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -699,10 +699,6 @@ video {
   height: 0.375rem;
 }
 
-.h-1\/2 {
-  height: 50%;
-}
-
 .h-1\/4 {
   height: 25%;
 }
@@ -726,6 +722,10 @@ video {
 
 .h-siz {
   height: 500px;
+}
+
+.h-sizh {
+  height: 390px;
 }
 
 .w-1\/2 {
@@ -1069,14 +1069,26 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-@media (min-width: 380px) {
-  .sm\:left-10 {
-    left: 2.5rem;
+@media (min-width: 340px) {
+  .sm\:-right-8 {
+    right: -2rem;
+  }
+
+  .sm\:left-0 {
+    left: 0px;
   }
 
   .sm\:my-10 {
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
+  }
+
+  .sm\:hidden {
+    display: none;
+  }
+
+  .sm\:h-3\/4 {
+    height: 75%;
   }
 
   .sm\:rounded-t-full {
@@ -1088,15 +1100,19 @@ video {
     padding: 0px;
   }
 
-  .sm\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
 @media (min-width: 768px) {
   .md\:-left-1\/4 {
     left: -25%;
+  }
+
+  .md\:left-1 {
+    left: 0.25rem;
   }
 
   .md\:block {
@@ -1123,6 +1139,18 @@ video {
     width: 41.666667%;
   }
 
+  .md\:w-md_nav_w {
+    width: 800px;
+  }
+
+  .md\:justify-between {
+    justify-content: space-between;
+  }
+
+  .md\:justify-items-center {
+    justify-items: center;
+  }
+
   .md\:rounded-full {
     border-radius: 9999px;
   }
@@ -1134,8 +1162,17 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:left-0 {
+    left: 0px;
+  }
+
   .lg\:left-5 {
     left: 1.25rem;
+  }
+
+  .lg\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .lg\:block {
@@ -1144,6 +1181,10 @@ video {
 
   .lg\:flex {
     display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
   }
 
   .lg\:h-screen {
